# financial-pipeline-tauri-main

./: .env.example  .gitignore  CHANGELOG_v2.5.md  Cargo.toml  LICENSE  PROJECT_SUMMARY.md  README.md  SPEC_TRADING_SECURITY.md  app.py  app_old.py  launch_gui.py  load_test_data.py  migrate_to_yahoo.py  refetch_adjusted_prices.py  requirements.txt  setup.py  sync_symbols.py  tmpclaude-ba77-cwd
config/: config.example.json  config.json  schema.sql
docs/: GUI_GUIDE.md  GUI_INSTALLATION.md  QUICKSTART.md
examples/: workflow.py
qt-app/: Cargo.toml  build.rs
qt-app/src/: main.rs
qt-app/ui/: app.slint
scripts/: fetch_macro.py  fetch_prices.py  init_db.py  load_symbols.py  query.py
src/: backtest.rs  db.rs  error.rs  fred.rs  indicators.rs  lib.rs  main.rs  models.rs  pipeline.py  pipeline.py.backup  pipeline.py.tmp.17556.1767749962454  pipeline_OLD.py  signals.rs  trends.rs  yahoo.rs
tauri-app/: index.html  package.json  vite.config.ts
tauri-app/src/: api.ts  chart.ts  main.ts  styles.css
tauri-app/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: lib.rs
