[package]
name = "financial_pipeline"
version = "0.1.0"
edition = "2021"
authors = ["STRYK"]
description = "Financial data pipeline with SQLite storage - Rust rewrite"

[dependencies]
# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP client for Yahoo Finance & FRED
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# CLI interface
clap = { version = "4.0", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CSV parsing (for FRED data)
csv = "1.3"

[features]
default = []
tauri = ["dep:tauri"]

[dependencies.tauri]
version = "1.5"
optional = true
features = ["shell-open"]

[[bin]]
name = "financial_pipeline"
path = "src/main.rs"

[lib]
name = "financial_pipeline"
path = "src/lib.rs"
