[package]
name = "financial-pipeline-native"
version = "0.1.0"
edition = "2021"
authors = ["STRYK"]
description = "Financial Pipeline - Native GUI (Slint)"

[dependencies]
# UI Framework - native look across platforms
slint = "1.8"

# Our financial pipeline library
financial_pipeline = { path = ".." }

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread"] }

[build-dependencies]
slint-build = "1.8"

[[bin]]
name = "financial_pipeline_native"
path = "src/main.rs"
